# closezap-ai

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py  start.bat  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2024_01_15_1200-001_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  lead.py
backend/app/routes/: __init__.py  leads.py  webhook.py
backend/app/services/: __init__.py  ai_service.py  followup_service.py  lead_service.py
backend/scripts/: check_db.py  create_lead.py  seed_data.py  send_followup.py  setup_project.py  test_ai.py
backend/tests/: conftest.py  test_leads.py  test_services.py  test_webhook.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: index.css  main.jsx
frontend/src/components/: Dashboard.jsx  LeadsTable.jsx  StatusDropdown.jsx
frontend/src/hooks/: useLeads.js
frontend/src/services/: leads.js
